解决些许小问题并优化处理~

--- a/CDDStoreDemo/Podfile
+++ b/CDDStoreDemo/Podfile
@@ -12,6 +12,7 @@ pod 'SDWebImage' ,"3.8.2"
 pod 'ZXingObjC'
 pod 'TZImagePickerController'
 pod 'IQKeyboardManager'
+pod 'DZNEmptyDataSet'
 
 target 'CDDStoreDemo' do
 
